# Graphics

./: CMakeLists.txt
Source/: Brush.cpp  Brush.h  Context.cpp  EFX.cpp  EFX.h  Effect.h  GLUtils.cpp  GLUtils.h  GraphicApplication.cpp  GraphicContext.cpp  GraphicContext.h  OpenGL.cpp  OutEfx.cpp  Rect.h  Scene.cpp  Scene.h  Sprite.h  Utility.h  Visual.cpp  Window.cpp  Window.h  main.cpp
Source/Brush/: Brush.cpp
Source/Effect/: Effect.cpp
Source/GIL/: AliasFactory.h  BAPresentation.h  Basics.h  RGBA.h
Source/Graphics/: Brush.h  Context.h  GLUtils.h  GraphicApplication.h  OpenGL.h  OutEfx.h  Rect.h  Visual.h  Window.h
Source/Math/: Matrix.h  Vector.h
Source/Visual/: Brush.h  Effect.h  GLUtils.cpp  GLUtils.h  Scene.cpp  Scene.h  Sprite.h  tmain.cpp
Source/Visual/Brush/: Brush.cpp
Source/Visual/Effect/: Effect.cpp
Swap/GIL/: BAPresentation.h  RGBA.h
